deploy/staging/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: allocation-api
  labels:
    app: allocation-api
spec:
  replicas: 3
  revisionHistoryLimit: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 2
  selector:
    matchLabels:
      app: allocation-api
  template:
    metadata:
      labels:
        app: allocation-api
    spec:
      containers:
        - name: allocation-api
          image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/offender-management/offender-management-allocation-api:latest
          imagePullPolicy: Always
          command: ['sh', '-c', "bundle exec rails db:migrate && bundle exec db:seed && bundle exec puma -p 3000 -C ./config/puma_prod.rb --pidfile /tmp/server.pid"]
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 60
        - name: allocation-api-metrics
          image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/offender-management/offender-management-allocation-api:latest
          imagePullPolicy: Always
          command: ['sh', '-c', "bundle exec prometheus_exporter"]
          ports:
            - containerPort: 9394
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9394
            initialDelaySeconds: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9394
            initialDelaySeconds: 10
            periodSeconds: 60
